Temporary fix to spacing issue on home page

--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -9,7 +9,6 @@
 }
 
 .introduction__text{
-    height: 100%;
     padding: 10px;
     overflow-y: auto;
 }
